<resources>
    <string name="app_name">PomodoroTrello</string>
    <string name="title_activity_config">Configuration</string>
    <string name="title_activity_tasks">Tasks</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Config messages -->
    <string name="connect_warning">Connect to Trello</string>
    <string name="connect_warning_to_see_tasks">Connect to Trello to see your tasks</string>

    <string name="select_board">Select Board</string>
    <string name="select_todo_list">Select TO-DO List</string>
    <string name="select_doing_list">Select Doing List</string>
    <string name="select_done_list">Select Done List</string>

    <string name="menu_tasks">Tasks</string>
    <string name="menu_pomodoro">Pomodoro</string>
    <string name="menu_settings">Configuration</string>

    <string name="save_config_button">Save Configuration</string>
    <string name="connect_config_button">Connect</string>

    <!--Alert dialog-->
    <string name="success_value">Success</string>
    <string name="values_saved">Values saved</string>
    <string name="Ok">Ok</string>

    <!--Task tab titles-->
    <string name="tab_tasks_title_todo">To-Do</string>
    <string name="tab_tasks_title_doing">Doing</string>
    <string name="tab_tasks_title_done">Done</string>

    <string name="start_task">Start task</string>
    <string name="select_task">Select Task</string>

    <!--Detailed Card -->
    <string name="running_time">Running Time</string>
    <string name="total_time">Total Time</string>
    <string name="pomodoros">Pomodoros</string>
    <string name="start_time">Start</string>
    <string name="pause_time">Pause</string>
    <string name="stop_time">Stop</string>
    <string name="back_task">Back</string>
    <string name="done_task">Done</string>
    <string name="short_break_task">Short Break</string>
    <string name="long_break_task">Long Break</string>
    <string name="zero_time_hours">00:00:00</string>
    <string name="zero_count">0</string>
    <string name="time_spent">Time Spent</string>

    <!-- Notification -->
    <string name="notification_title">PomodoroTrello</string>
    <string name="notification_text">Your pomodoro timer ran out!</string>

</resources>
