<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        tools:text="Pomodoros"
        android:text="@string/pomodoros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/total_time_text_view"
        android:layout_toRightOf="@+id/total_time_text_view"
        android:layout_toEndOf="@+id/total_time_text_view"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:id="@+id/pomodoros_spent_text_view" />

    <TextView
        android:text="@string/zero_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignTop="@+id/total_time_value_text_view"
        android:layout_alignRight="@+id/pomodoros_spent_text_view"
        android:layout_alignEnd="@+id/pomodoros_spent_text_view"
        android:id="@+id/pomodoros_spent_value_text_view" />

    <TextView
        android:text="@string/zero_time_hours"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:id="@+id/timer"
        android:layout_below="@+id/total_time_value_text_view"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/zero_time_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total_time_value_text_view"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/total_time_text_view"
        android:layout_toLeftOf="@+id/timer"
        android:layout_toStartOf="@+id/timer" />

    <TextView
        tools:text="Total Time"
        android:text="@string/total_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total_time_text_view"
        android:layout_marginTop="40dp"
        android:layout_marginRight="13dp"
        android:layout_marginEnd="13dp"
        android:layout_alignRight="@+id/total_time_value_text_view"
        android:layout_alignEnd="@+id/total_time_value_text_view" />

    <Button
        tools:text="Stop"
        android:text="@string/stop_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stop_button"
        android:layout_alignBaseline="@+id/start_pause_button"
        android:layout_alignBottom="@+id/start_pause_button"
        android:layout_toRightOf="@+id/timer"
        android:layout_toEndOf="@+id/timer" />

    <Button
        tools:text="Start/Pause"
        android:text="@string/start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:id="@+id/start_pause_button"
        android:layout_below="@+id/timer"
        android:layout_toLeftOf="@+id/timer"
        android:layout_toStartOf="@+id/timer"/>

    <Button
        tools:text="Back"
        android:text="@string/back_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:id="@+id/back_button"
        android:layout_below="@+id/start_pause_button"
        android:layout_toLeftOf="@+id/timer"
        android:layout_toStartOf="@+id/timer"
        android:visibility="invisible"/>

    <Button
        tools:text="Short break"
        android:text="@string/short_break_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/short_break_button"
        android:layout_below="@+id/back_button"
        android:layout_toRightOf="@+id/start_pause_button"
        android:layout_toEndOf="@+id/start_pause_button"
        android:visibility="invisible"/>

    <Button
        tools:text="Long break"
        android:text="@string/long_break_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/long_break_button"
        android:layout_below="@+id/short_break_button"
        android:layout_toRightOf="@+id/start_pause_button"
        android:layout_toEndOf="@+id/start_pause_button"
        android:layout_alignRight="@id/short_break_button"
        android:layout_alignEnd="@id/short_break_button"
        android:visibility="invisible"/>

    <Button
        tools:text="Done"
        android:text="@string/done_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:id="@+id/done_button"
        android:layout_alignBaseline="@+id/back_button"
        android:layout_toRightOf="@+id/short_break_button"
        android:layout_toEndOf="@+id/short_break_button"
        android:visibility="invisible"/>

</RelativeLayout>